# EPL-Viz

./: .clang-format  .coveralls.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL.md  LICENCE.txt  README.md  checkFormat.sh  fixUI.sh  travisRun.sh
cmake/: EPL-VizConfig.cmake  FindGMock.cmake  FindQwt.cmake  FindQwt5.cmake  FindTinyXML2.cmake  cmakeScripLoader.cmake
cmake/templates/: CMakeLists.exe.txt  CMakeLists.lib.txt  defines.in.hpp
epl-viz/: CMakeScript.cmake  CrashDialog.cpp  CrashDialog.hpp  main.cpp
epl-viz/ui/: CrashDialog.ui
gitHooks/: pre-commit
libEPLViz/: CMakeScript.cmake  resources.qrc
libEPLViz/KDE/: KDEPluginEditor.cpp  KDEPluginEditor.hpp
libEPLViz/resources/: epl-viz.rc.in
libEPLViz/resources/Breeze_icons/: breeze-icons.qrc
libEPLViz/resources/Breeze_icons-dark/: breeze-icons-dark.qrc  index.theme  light2Dark
libEPLViz/src/: BaseModel.cpp  BaseModel.hpp  CyCoTreeItem.cpp  CycleSetter.cpp  CycleSetter.hpp  EPLVizEnum2Str.cpp  EPLVizEnum2Str.hpp  GUIState.hpp  MainWindow.cpp  MainWindow.hpp  ModelThread.cpp  ModelThread.hpp  NodeWidget.cpp  NodeWidget.hpp  Profile.cpp  Profile.hpp  ProfileManager.cpp  ProfileManager.hpp  QWTPlotModel.cpp  QWTPlotModel.hpp  QWTPlotWidget.cpp  QWTPlotWidget.hpp  basemodel.cpp  basemodel.hpp  curodmodelitem.cpp  curodmodelitem.hpp  currentodmodel.cpp  currentodmodel.hpp  currentodwidget.cpp  currentodwidget.hpp  cyclecommandsmodel.cpp  cyclecommandsmodel.hpp  cyclecommandswidget.cpp  cyclecommandswidget.hpp  cycleviewerwidget.cpp  cycleviewerwidget.hpp  cycotreeitem.cpp  cycotreeitem.hpp  eventviewerwidget.cpp  eventviewerwidget.hpp  (+52 more)
libEPLViz/src/baseModelView/: TreeModelBase.cpp  TreeModelBase.hpp  TreeModelItemBase.cpp  TreeModelItemBase.hpp
libEPLViz/src/interfacePicker/: InterfaceListWidget.cpp  InterfaceListWidget.hpp  InterfacePicker.cpp  InterfacePicker.hpp  interfacelistwidget.cpp  interfacelistwidget.hpp  interfacepicker.cpp  interfacepicker.hpp
libEPLViz/src/mainWidgets/: CycleViewerWidget.cpp  CycleViewerWidget.hpp  EventViewerWidget.cpp  EventViewerWidget.hpp  PluginSelectorWidget.cpp  PluginSelectorWidget.hpp  QwtBaseModel.cpp  QwtBaseModel.hpp  cycleviewerwidget.hpp  eventviewerwidget.cpp  eventviewerwidget.hpp
libEPLViz/src/mainWidgets/currentOD/: CurODCycleStorage.cpp  CurODCycleStorage.hpp  CurODModelItem.cpp  CurODModelItem.hpp  CurrentODModel.cpp  CurrentODModel.hpp  CurrentODWidget.cpp  CurrentODWidget.hpp  ODFilter.cpp  ODFilter.hpp  curodmodelitem.cpp  curodmodelitem.hpp  currentodmodel.cpp  currentodmodel.hpp  currentodwidget.cpp
libEPLViz/src/mainWidgets/cycleCommand/: CyCoTreeItem.cpp  CyCoTreeItem.hpp  CycleCommandsModel.cpp  CycleCommandsModel.hpp  CycleCommandsWidget.cpp  CycleCommandsWidget.hpp  cyclecommandsmodel.cpp  cyclecommandsmodel.hpp
libEPLViz/src/mainWidgets/networkGraph/: NetworkGraphModel.cpp  NetworkGraphModel.hpp  NetworkGraphWidget.cpp  NetworkGraphWidget.hpp  NodeWidget.cpp  NodeWidget.hpp  networkgraphmodel.cpp  networkgraphmodel.hpp  networkgraphwidget.hpp
libEPLViz/src/mainWidgets/odDescription/: ODDescriptionItem.cpp  ODDescriptionItem.hpp  ODDescriptionModel.cpp  ODDescriptionModel.hpp  ODDescriptionWidget.cpp  ODDescriptionWidget.hpp  ODFilterDesc.cpp  ODFilterDesc.hpp  oddescriptionmodel.cpp  oddescriptionmodel.hpp  oddescriptionwidget.cpp  oddescriptionwidget.hpp
libEPLViz/src/mainWidgets/packetHistory/: PacketHistoryModel.cpp  PacketHistoryModel.hpp  PacketHistoryWidget.cpp  PacketHistoryWidget.hpp  packethistorymodel.cpp  packethistorymodel.hpp  packethistorywidget.hpp
libEPLViz/src/mainWidgets/packetList/: PacketListItem.cpp  PacketListItem.hpp  PacketListModel.cpp  PacketListModel.hpp
libEPLViz/src/mainWidgets/packetViz/: PacketVizModel.cpp  PacketVizModel.hpp  PacketVizPacket.cpp  PacketVizPacket.hpp  PacketVizPacket.ui  PacketVizWidget.cpp  PacketVizWidget.hpp
libEPLViz/src/mainWidgets/pluginLog/: PluginLogModel.cpp  PluginLogModel.hpp
libEPLViz/src/mainWidgets/pythonLog/: PythonLogModel.cpp  PythonLogModel.hpp  PythonLogWidget.cpp  PythonLogWidget.hpp  pythonlogmodel.cpp  pythonlogmodel.hpp  pythonlogwidget.cpp
libEPLViz/src/mainWidgets/qwtPlot/: QWTPlotModel.cpp  QWTPlotModel.hpp  QWTPlotWidget.cpp  QWTPlotWidget.hpp
libEPLViz/src/mainWidgets/timeLine/: TimeLineMagnifier.cpp  TimeLineMagnifier.hpp  TimeLineModel.cpp  TimeLineModel.hpp  TimeLineWidget.cpp  TimeLineWidget.hpp  timelinemodel.cpp  timelinemodel.hpp  timelinewidget.cpp  timelinewidget.hpp
libEPLViz/src/plotCreator/: PlotCreator.cpp  PlotCreator.hpp
libEPLViz/src/pluginEditor/: DefaultPluginEditor.cpp  DefaultPluginEditor.hpp  PluginEditorBase.hpp  PluginEditorWidget.cpp  PluginEditorWidget.hpp  PluginListWidget.cpp  PluginListWidget.hpp  PluginsWindow.cpp  PluginsWindow.hpp  pluginlistwidget.hpp  pluginswindow.hpp
libEPLViz/src/settings/: SettingsProfileItem.cpp  SettingsProfileItem.hpp  SettingsWindow.cpp  SettingsWindow.hpp  settingsnodeitem.cpp  settingsnodeitem.hpp  settingsprofileitem.cpp  settingsprofileitem.hpp  settingswindow.cpp  settingswindow.hpp
libEPLViz/src/settings/plots/: PlotCreator.cpp  PlotCreator.hpp  SettingsPlotItem.cpp  SettingsPlotItem.hpp  SettingsPlotModel.cpp  SettingsPlotModel.hpp
libEPLViz/src/settings/writers/: AbstractWriter.cpp  AbstractWriter.hpp  ProfileExporter.cpp  ProfileExporter.hpp  SettingsWriter.cpp  SettingsWriter.hpp
libEPLViz/src/stats/: Statistics.cpp  Statistics.hpp
libEPLViz/src/utils/: HexSpinBox.cpp  HexSpinBox.hpp
libEPLViz/ui/: CycleSetter.ui  PacketVizPacket.ui  PlotCreator.ui  Statistics.ui  interfacelistwidget.cpp  interfacelistwidget.hpp  interfacepicker.ui  mainwindow.ui  pluginswindow.ui  settingswindow.ui  settingswindows.ui
tests/: main.cpp
